fix: change xhtml name

--- a/InventoryManagementSystem/web/main.xhtml
+++ b/InventoryManagementSystem/web/main.xhtml
@@ -12,7 +12,7 @@
         <h:form class="btn">
             <h:commandButton value="Regist inventory information" action="register_inventory" />
             <h:commandButton value="Search inventory" action="search_inventory" />
-            <h:commandButton value="Uncomplete information" action="show_uncomplete" />
+            <h:commandButton value="Incomplete information" action="show_incomplete" />
         </h:form>
     </h:body>
 </html>
