--- a/InventoryManagementSystem/web/main.xhtml
+++ b/InventoryManagementSystem/web/main.xhtml
@@ -2,12 +2,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:jsf="http://xmlns.jcp.org/jsf">
+      xmlns:jsf="http://xmlns.jcp.org/jsf"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Main Page</title>
         <link rel="stylesheet" type="text/css" href="./css/style.css"/>
     </h:head>
     <h:body>
+        <header>
+            <ui:insert name="header">
+                <ui:include src="./templates/header.xhtml"/>
+            </ui:insert> 
+        </header>
         <h1>Main Page</h1>
         <h:form class="btn">
             <h:commandButton value="Regist inventory information" action="register_inventory" />
