--- a/InventoryManagementSystem/web/update_confirm.xhtml
+++ b/InventoryManagementSystem/web/update_confirm.xhtml
@@ -10,6 +10,11 @@
         <link rel="stylesheet" type="text/css" href="./css/style.css"/>
     </h:head>
     <h:body>
+        <header>
+            <ui:insert name="header">
+                <ui:include src="./templates/header.xhtml"/>
+            </ui:insert> 
+        </header>
         <div class="main">
             <h:form>
                 <h2>Confirm Edit Inventory</h2>
