feat: add input fields

--- a/InventoryManagementSystem/web/register_confirm.xhtml
+++ b/InventoryManagementSystem/web/register_confirm.xhtml
@@ -28,6 +28,10 @@
                         <td>#{registerInventory.author}</td>
                     </tr>
                     <tr>
+                        <td>Publisher: </td>
+                        <td>#{registerInventory.publisher}</td>
+                    </tr>
+                    <tr>
                         <td>Status: </td>
                         <td>#{registerInventory.status}</td>
                     </tr>
@@ -38,6 +42,14 @@
                     <tr>
                         <td>Storage: </td>
                         <td>#{registerInventory.storage}</td>
+                    </tr>
+                    <tr>
+                        <td>Quantity: </td>
+                        <td>#{registerInventory.quantity}</td>
+                    </tr>
+                    <tr>
+                        <td>Note: </td>
+                        <td>#{registerInventory.note}</td>
                     </tr>
                 </table>
                 <div class="btn">
