--- a/InventoryManagementSystem/web/register_inventory.xhtml
+++ b/InventoryManagementSystem/web/register_inventory.xhtml
@@ -21,11 +21,15 @@
                 <table>
                     <tr>
                         <td>Title: </td>
-                        <td><input type="text" jsf:value="#{registerInventory.title}" placeholder="Winnie the Pooh" /></td>
+                        <td><input type="text" jsf:value="#{registerInventory.title}" placeholder="title" /></td>
                     </tr>
                     <tr>
                         <td>Author: </td>
-                        <td><input type="text" jsf:value="#{registerInventory.author}" placeholder="A.A.MILNE" /></td>
+                        <td><input type="text" jsf:value="#{registerInventory.author}" placeholder="author" /></td>
+                    </tr>
+                    <tr>
+                        <td>Publisher: </td>
+                        <td><input type="text" jsf:value="#{registerInventory.publisher}" placeholder="publisher" /></td>
                     </tr>
                     <tr>
                         <td>Status: </td>
@@ -37,7 +41,7 @@
                     </tr>
                     <tr>
                         <td>Price: </td>
-                        <td>￥<input type="text" jsf:value="#{registerInventory.price}" placeholder="9002" /></td>
+                        <td>￥<input type="text" jsf:value="#{registerInventory.price}" placeholder="000" /></td>
                     </tr>
                     <tr>
                         <td>Storage: </td>
@@ -46,6 +50,14 @@
                                 <f:selectItems value="#{selection.storageItems}" />
                             </h:selectOneMenu>
                         </td>
+                    </tr>
+                    <tr>
+                        <td>Quantity: </td>
+                        <td><input type="text" jsf:value="#{registerInventory.quantity}" placeholder="1" /></td>
+                    </tr>
+                    <tr>
+                        <td>Note: </td>
+                        <td><textarea jsf:value="#{registerInventory.note}" placeholder="note" /></td>
                     </tr>
                 </table>
                 <div class="btn">
