feat: add output fields

--- a/InventoryManagementSystem/web/update_confirm.xhtml
+++ b/InventoryManagementSystem/web/update_confirm.xhtml
@@ -28,6 +28,10 @@
                         <td>#{updateInventory.author}</td>
                     </tr>
                     <tr>
+                        <td>Publisher: </td>
+                        <td>#{updateInventory.publisher}</td>
+                    </tr>
+                    <tr>
                         <td>Status: </td>
                         <td>#{updateInventory.status}</td>
                     </tr>
@@ -38,6 +42,14 @@
                     <tr>
                         <td>Storage: </td>
                         <td>#{updateInventory.storage}</td>
+                    </tr>
+                    <tr>
+                        <td>Quantity: </td>
+                        <td>#{updateInventory.quantity}</td>
+                    </tr>
+                    <tr>
+                        <td>Note: </td>
+                        <td>#{updateInventory.note}</td>
                     </tr>
                 </table>
                 <div class="btn">
