--- a/InventoryManagementSystem/web/ship_confirm.xhtml
+++ b/InventoryManagementSystem/web/ship_confirm.xhtml
@@ -70,6 +70,7 @@
                     </h:column>
                 </h:dataTable>
                 <div class="btn">
+                    <h:commandButton value="Back" action="#{shipInventory.back()}" />
                     <h:commandButton value="Ship" action="#{shipInventory.ship()}" />
                 </div>
             </h:form>
